[project]
name = ""
version = ""
description = ""
authors = [
    {name = "trwiley", email = "taylor.r.wiley@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "spacy==3.2.0",
    "kglab>=0.6.1",
    "crosslingual-coreference>=0.2.4",
    "allennlp>=2.9.3",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz",
]
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
